# esp-self

./: .gitignore  Cargo.toml  cargo.toml
cli/: Cargo.toml  README.md  cli-tooling.txt  partition-table.csv  self-esp
cli/src/: flasher.rs  main.rs  serial.rs
cli/src/commands/: flash.rs  load.rs  mod.rs  monitor.rs  watch.rs
cli/src/core/: temp_file.rs
firmware/: Cargo.toml
firmware/src/: configurator.rs  main.rs
firmware/src/lib/: mod.rs  storage.rs
hermes/: Cargo.toml
hermes/src/: flasher.rs  main.rs  serial.rs
hermes/src/commands/: configure.rs  flash.rs  load.rs  mod.rs
src/: main.rs
