[package]
name = "ego-esp"
version = "0.1.0"
authors = ["noreplydev <contact.cristiansanchez@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ego-esp"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.50", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
self_vm = {git = "https://github.com/ego-programming-language/ego", package = "self-vm"}

[build-dependencies]
embuild = "0.33"
